--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -4,7 +4,6 @@
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-color: #eee;
     padding-bottom: 15rem;
   }
   .login_container_form{
@@ -13,7 +12,7 @@
     width: 40rem;
     max-width: 40rem;
     padding: 0 1.5rem;
-    padding: 4rem 3rem;
+    padding: 4rem 1.5rem;
     box-shadow: 0 0 .2rem .1rem rgba(0,0,0,.04);
     border-radius: 1rem;
     background-color: #fff;
@@ -32,4 +31,13 @@
   .login_container_form_h2{
     text-align: center;
     margin-bottom: 3rem;
+  }
+
+  @media (min-width:500px){
+    .login_container{
+      background-color: #eee;
+    }
+    .login_container_form{
+      padding: 4rem 3rem;
+    }
   }
